--- a/environment.yml
+++ b/environment.yml
@@ -1,34 +1,28 @@
-attrs==19.3.0
-certifi==2020.4.5.1
-click==7.1.1
-click-plugins==1.1.1
-cligj==0.5.0
-cycler==0.10.0
-Fiona==1.8.13
-GDAL==3.0.4
-geopandas==0.7.0
-HAPI-Nile==0.1.0
-kiwisolver==1.2.0
-matplotlib==3.2.1
-mkl-service==2.3.0
-munch==2.5.0
-numpy==1.18.1
-pandas==1.0.3
-patsy==0.5.1
-pyparsing==2.4.7
-pyproj==2.6.0
-PyQt5==5.12.3
-PyQt5-sip==4.19.18
-PyQtWebEngine==5.12.1
-python-dateutil==2.8.1
-pytz==2019.3
-readme-renderer==25.0
-requests-toolbelt==0.9.1
-Rtree==0.9.4
-scipy==1.4.1
-Shapely==1.7.0
-six==1.14.0
-statsmodels==0.11.1
-tornado==6.0.4
-twine==3.1.1
-wincertstore==0.2
+channels:
+  - conda-forge
+  - udst
+  - https://conda.anaconda.org/mutirri
+  - defaults
+dependencies:
+  - fiona=1.8.13=py37hb7fdc2d_0
+  - gdal=3.0.4=py37hd44be9e_8
+  - geopandas=0.7.0=py_1
+  - geos=3.8.1=he025d50_0
+  - geotiff=1.5.1=h3d29ae3_10
+  - matplotlib=3.2.1=0
+  - matplotlib-base=3.2.1=py37h911224e_0
+  - numpy=1.18.1=py37h90d3380_1
+  - pandas=1.0.3=py37h3bbf574_1
+  - pip=20.0.2=py_2
+  - proj=7.0.0=haa36216_3
+  - pyproj=2.6.0=py37he833962_1
+  - python=3.7.6=h60c2a47_5_cpython
+  - scipy=1.4.1=py37h9439919_0
+  - setuptools=46.1.3=py37hc8dfbb8_0
+  - shapely=1.7.0=py37he1cf020_3
+  - sqlite=3.30.1=hfa6e2cd_0
+  - statsmodels=0.11.1=py37h8055547_1
+  - tornado=6.0.4=py37hfa6e2cd_0
+  - pip:
+    - hapi-nile==0.1.0
+
