--- a/environment.yml
+++ b/environment.yml
@@ -3,22 +3,22 @@ channels:
   - udst
   - https://conda.anaconda.org/mutirri
   - defaults
-channel_priority: strict
 dependencies:
-  - pip=20.0.2=py_2  
-  - numpy=1.18.1=py37h90d3380_1
-  - fiona=1.8.13=py37hb7fdc2d_0
-  - gdal=3.0.4=py37hd44be9e_8
-  - geopandas=0.7.0=py_1
-  - geos=3.8.1=he025d50_0
-  - matplotlib=3.2.1=0
-  - pandas=1.0.3=py37h3bbf574_1
-  - proj=7.0.0=haa36216_3
-  - pyproj=2.6.0=py37he833962_1
-  - python=3.7.6=h60c2a47_5_cpython
-  - scipy=1.4.1=py37h9439919_0
-  - setuptools=46.1.3=py37hc8dfbb8_0
-  - shapely=1.7.0=py37he1cf020_3
+  - pip=20.0.2
+  - numpy
+  - fiona
+  - gdal
+  - geopandas
+  - geos=3.8.1
+  - matplotlib
+  - pandas
+  - proj
+  - pyproj
+  - python
+  - scipy
+  - setuptools
+  - shapely
+  - statsmodels
   - pip:
     - hapi-nile==0.1.0
 
