--- a/environment.yml
+++ b/environment.yml
@@ -15,7 +15,7 @@ dependencies:
   - geos=3.8.*
   - matplotlib=3.2.*
   - matplotlib-base=3.2.*
-  - python
+  - python=3.7.*
   - scipy=1.3.*
   - setuptools
   - shapely=1.7.*
@@ -23,4 +23,5 @@ dependencies:
   - rasterio=1.1.*
   - pip:
     - numpy==1.18.*
+    #- hapi-nile==0.1.0
     - git+https://github.com/MAfarrag/HAPI.git
