--- a/environment.yml
+++ b/environment.yml
@@ -5,11 +5,14 @@ channels:
   - defaults
 dependencies:
   - pip
-  - affine=2.3.*
-  - fiona=1.8.*
+  - affine=2.3.0
+  #- snuggs=1.4.7
+  #- click-plugins=1.1.1
+  #- conda=4.8.*
+  #- fiona=1.8.*
   - proj=6.3.*
   - pyproj=2.6.*  
-  - gdal=3.0.*
+  - gdal=2.3.3
   - pandas=1.0.*
   - geopandas=0.7.*
   - geos=3.8.*
@@ -18,7 +21,7 @@ dependencies:
   - python=3.7.*
   - scipy=1.3.*
   - setuptools
-  - shapely=1.7.*
+  - shapely=1.6.4
   - statsmodels=0.11.*
   - rasterio=1.1.*
   - pip:
