--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -5,7 +5,7 @@ package:
   version: {{ version }}
 
 source:
-  path: F:\01Algorithms\anaconda-package\HAPI
+  path: F:\01Algorithms\HAPI
 
 build:
   noarch: python
@@ -14,57 +14,49 @@ build:
 
 requirements:
   host:
-    - python
-    - pip
-    - numpy==1.18.*
-    - affine=2.3.*
-    - fiona=1.8.*
-    - proj=6.3.*
-    - pyproj=2.6.*  
-    - gdal=3.0.*
-    - pandas=1.0.*
-    - geopandas=0.7.*
-    - geos=3.8.*
-    - matplotlib=3.2.*
-    - matplotlib-base=3.2.*
-    - python=3.7.*
-    - scipy=1.3.*
-    - setuptools
-    - shapely=1.7.*
-    - statsmodels=0.11.*
-    - rasterio=1.1.*
+  - pip
+  - numpy
+  - affine
+  - fiona
+  - proj
+  - pyproj
+  - gdal
+  - pandas
+  - geopandas
+  - matplotlib
+  - python
+  - scipy
+  - shapely
+  - statsmodels
+  - rasterio
   run:
-    - python
     - pip
-    - numpy==1.18.*
-    - affine=2.3.*
-    - fiona=1.8.*
-    - proj=6.3.*
-    - pyproj=2.6.*  
-    - gdal=3.0.*
-    - pandas=1.0.*
-    - geopandas=0.7.*
-    - geos=3.8.*
-    - matplotlib=3.2.*
-    - matplotlib-base=3.2.*
-    - python=3.7.*
-    - scipy=1.3.*
-    - setuptools
-    - shapely=1.7.*
-    - statsmodels=0.11.*
-    - rasterio=1.1.*
+    - numpy
+    - affine
+    - fiona
+    - proj
+    - pyproj
+    - gdal
+    - pandas
+    - geopandas
+    - matplotlib
+    - python
+    - scipy
+    - shapely
+    - statsmodels
+    - rasterio
 
 test:
   imports:
-    - HAPI
+    - Hapi
 
 about:
-  home: https://github.com/shibukawa/imagesize_py
+  home: https://github.com/MAfarrag/HAPI
   license: MIT
-  summary: 'Getting image size from png/jpeg/jpeg2000/gif file'
+  summary: 'Distributed Hydrological model'
   description: |
     This module analyzes jpeg/jpeg2000/png/gif image header and
     return image size.
-  dev_url: https://github.com/shibukawa/imagesize_py
-  doc_url: https://pypi.python.org/pypi/imagesize
-  doc_source_url: https://github.com/shibukawa/imagesize_py/blob/master/README.rst
+  dev_url: https://github.com/MAfarrag/HAPI
+  doc_url: https://github.com/MAfarrag/HAPI
+  doc_source_url: https://github.com/MAfarrag/HAPI/master/README.md
