conda-forge files

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ Web_application/HAPI/static/input_data/Google API.txt
 *.npy
 *.pkl
 *.ipynb
+# conda smithy ci-skeleton start
+*.pyc
+
+build_artifacts
+# conda smithy ci-skeleton end
