--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ jobs:
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+  #- pip install -r requirements.txt
+  - python setup.py install
 # command to run tests
 script:
   - python tests.py
