--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ jobs:
         # Install the latest version of Miniconda
         - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
         - chmod +x miniconda.sh
-        #- ./miniconda.sh -b
+        - ./miniconda.sh -b
         - export PATH=/home/travis/miniconda2/bin:$PATH
         - conda update --yes conda  # Update CONDA without command line prompt
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
