--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,12 @@ jobs:
         - choco install python --version 3.8.0
         - python -m pip install --upgrade pip
         # Install the latest version of Miniconda
-        - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+        #- wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+        - if [ "$PY" = "2.7" ];  then wget "https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh" -O miniconda.sh; fi
+        - if [ "$PY" = "3.6" ];  then wget "https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" -O miniconda.sh; fi
         - chmod +x miniconda.sh
         - ./miniconda.sh -b
-        - export PATH=/home/travis/miniconda2/bin:$PATH
+        - export PATH=/home/travis/miniconda/bin:$PATH
         - conda update --yes conda  # Update CONDA without command line prompt
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 # command to install dependencies
