--- a/.travis.yml
+++ b/.travis.yml
@@ -1,55 +1,38 @@
 language: python
-jobs:
-  include:
-    - name: "Python 3.8.0 on Xenial Linux"
-      python:
-        - "2.7"
-        - "3.4"
-        - "3.5"
-        - "3.6"      # current default Python on Travis CI
-        - "3.7"
-        - "3.8"
-        - "3.8-dev"  # 3.8 development branch
-        - "nightly"  # nightly build
-    - name: "Python 3.7.4 on macOS"
-      os: osx
-      osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
-      language: shell       # 'language: python' is an error on Travis CI macOS
-    - name: "Python 3.8.0 on Windows"
-      os: windows           # Windows 10.0.17134 N/A Build 17134
-      language: shell       # 'language: python' is an error on Travis CI Windows
-      before_install:
-        - choco install python --version 3.8.0
-        - python -m pip install --upgrade pip
-        # Install the latest version of Miniconda
-        - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-        #- if [ "$PY" = "2.7" ];  then wget "https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh" -O miniconda.sh; fi
-        #- if [ "$PY" = "3.6" ];  then wget "https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" -O miniconda.sh; fi
-        - chmod +x miniconda.sh
-        - ./miniconda.sh -b  -p /home/travis/miniconda;
-        - export PATH=/home/travis/miniconda/bin:$PATH
-        - conda update --yes conda  # Update CONDA without command line prompt
-      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
+python:
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6" # current default Python on Travis CI
+  - "3.7"
+  - "3.8"
+env: DEPS= "numpy affine fiona proj pyproj gdal pandas geopandas matplotlib python scipy shapely statsmodels rasterio"
+before_install:
+  # Install the latest version of Miniconda
+  - wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda2/bin:$PATH
+  - conda update --yes conda
+  - conda info -a
 # command to install dependencies
 install:
-  #- pip install -r requirements.txt
+  # Create a new environment
+  - conda create -q -n Hapi-env python=${TRAVIS_PYTHON_VERSION} --yes
+  - source activate Hapi-env
+  # Install various dependencies
+  - conda install --yes $DEPS pip
 
-  - conda install conda-build
   # You can add any CONDA channels you may need here. CONDA supports
   # both the commands add and append. The only difference is that 
   # the add command places the channel at the front of the priority 
   # list, while append does the opposite.
   - conda config --add channels conda-forge
 
-  # Create a new environment
-  - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
-  # Activate it
-  - source activate test
-
-  # Install various dependencies
-  - conda install --yes numpy=1.8 pytest pip
-
+  - python -V
+  - python setup.py build_ext --inplace
   - python setup.py install
+  - cd ..
 # command to run tests
 script:
   - python Examples/test.py
