--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ install:
   - python setup.py install
   - cd ..
 # command to run tests
-script:
+
+#script:
 #  - cd ./Hapi/Examples
 #  - pytest test.py
