--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_install:
   - conda info -a
 # command to install dependencies
 install:
+  # for python 3.4 as it does not exist in conda channels
   conda config --set restore_free_channel True
   # Create a new environment
   - conda create -q -n Hapi-env python=${TRAVIS_PYTHON_VERSION} --yes
