--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
   - "2.7"
-  - "3.4"
+  #- "3.4"
   - "3.5"
   - "3.6" # current default Python on Travis CI
   - "3.7"
@@ -18,7 +18,7 @@ before_install:
 # command to install dependencies
 install:
   # for python 3.4 as it does not exist in conda channels
-  conda config --set restore_free_channel True
+  #conda config --set restore_free_channel True
   # Create a new environment
   - conda create -q -n Hapi-env python=${TRAVIS_PYTHON_VERSION} --yes
   - source activate Hapi-env
