--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
     - Tutorial:
         - Introduction: README.md
         - Getting Started: getting_started.md
+        - Inputs: Inputs.md
         - Hydrological_model: Hydrological_model.md
     - License: license.md
 
