--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,9 +15,10 @@ nav:
         - Introduction: README.md
         - Getting Started: getting_started.md
         - Inputs: Inputs.md
-            - Hydrological_model: Hydrological_model.md
+        - Hydrological_model: Hydrological_model.md
 
-    - License: license.md
+    - About:
+        - License: license.md
 
 
 
