--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 build/
 dist/
-Hapi.egg-info/
+HAPI_Nile.egg-info/
 Examples/data/Hapi.sublime-project
 Examples/data/Hapi.sublime-workspace
 HapiSpyder/
