--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.2.0" %}
+{% set version = "0.3.0" %}
 
 package:
   name: hapi
@@ -11,6 +11,10 @@ build:
   noarch: python
   number: 0
   script: python -m pip install --no-deps --ignore-installed .
+
+channels:
+  - conda-forge  
+  - mafarrag
 
 requirements:
   host:
@@ -29,6 +33,8 @@ requirements:
   - shapely
   - statsmodels
   - rasterio
+  - rasterstats
+  - oasis
   run:
     - pip
     - numpy
@@ -45,6 +51,8 @@ requirements:
     - shapely
     - statsmodels
     - rasterio
+    - rasterstats
+    - oasis
 
 test:
   imports:
