--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
     - Tutorial:
         - Getting Started: getting_started.md
         - Inputs: Inputs.md
+        - Lumped Hydrological Model: Lumped_HBV.md
         - Hydrological model: Hydrological_model.md
         - Sensitivity Analysis: Sensitivity_Analysis.md
 
