--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,9 +11,9 @@ theme:
 
 nav:
     - Home: Introduction.md
-    - Content: index.md
+    #- Content: index.md
     - Tutorial:
-        - Getting Started: getting_started.md
+        #- Getting Started: getting_started.md
         - Inputs: Inputs.md
         - Lumped Hydrological Model: Lumped_HBV.md
         #- Hydrological model: Hydrological_model.md
