Added a V2 of MatchRasterAlignment function
The default version was not working for me. Found this function on GitHub and combined it with MatchNoDataValue function to get rasters entirely prepared

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ docs/source/HapiDocs.sublime-project
 docs/source/HapiDocs.sublime-workspace
 docs/HapiDocs.sublime-project
 docs/HapiDocs.sublime-workspace
+.DS_Store
