--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ docs/source/HapiDocs.sublime-project
 docs/source/HapiDocs.sublime-workspace
 docs/HapiDocs.sublime-project
 docs/HapiDocs.sublime-workspace
+Hapi/Saintvenant.py
+Hapi/Saintvenant.py
