--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,6 @@ HapiSpyder/
 *.zip
 *.ini
 *.drawio
-Web_application/HBV_distributed/static/images/cover00.jpg
-Web_application/HAPI/static/input_data/Google API.txt
 *.dbf
 *.prj
 *.xml
@@ -27,7 +25,6 @@ Web_application/HAPI/static/input_data/Google API.txt
 *.ipynb
 # conda smithy ci-skeleton start
 *.pyc
-
 build_artifacts
 # conda smithy ci-skeleton end
 .azure-pipelines/
@@ -45,5 +42,5 @@ docs/source/HapiDocs.sublime-project
 docs/source/HapiDocs.sublime-workspace
 docs/HapiDocs.sublime-project
 docs/HapiDocs.sublime-workspace
-Hapi/Saintvenant.py
-Hapi/Saintvenant.py
+Hapi/saintvenant.py
+Hapi/HM.py
