--- a/environment.yml
+++ b/environment.yml
@@ -21,6 +21,7 @@ dependencies:
   - netCDF4
   - oasis
   - hapi
+  - sklearn
   #- pip:
     #- hapi-nile==0.1.0
     #- git+https://github.com/MAfarrag/HAPI.git
