--- a/environment.yml
+++ b/environment.yml
@@ -22,6 +22,7 @@ dependencies:
   - oasis
   - hapi
   - sklearn
-  #- pip:
+  - pip:
+    - ecmwf-api-client 
     #- hapi-nile==0.1.0
     #- git+https://github.com/MAfarrag/HAPI.git
