--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,6 +49,7 @@ requirements:
     - shapely
     - statsmodels
     - rasterio
+    - sklearn
   run:
     - pip
     - numpy
@@ -65,7 +66,7 @@ requirements:
     - shapely
     - statsmodels
     - rasterio
-
+    - sklearn
 test:
   # Some packages might need a `test/commands` key to check CLI.
   # List all the packages/modules that `run_test.py` imports.
