--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,11 +1,11 @@
-{% set version = "0.3.0" %}
+{% set version = "1.0.0" %}
 
 package:
   name: hapi
   version: {{ version }}
 
 source:
-  path: F:\01Algorithms\HAPI
+  path: F:\01Algorithms\Hydrology\HAPI
 
 build:
   noarch: python
@@ -13,8 +13,8 @@ build:
   script: python -m pip install --no-deps --ignore-installed .
 
 channels:
-  - conda-forge  
   - mafarrag
+  - conda-forge  
 
 requirements:
   host:
@@ -35,6 +35,10 @@ requirements:
   - rasterio
   - rasterstats
   - oasis
+  - netCDF4
+  - scikit-learn
+  - scikit-image
+  - ecmwf-api-client
   run:
     - pip
     - numpy
@@ -53,6 +57,10 @@ requirements:
     - rasterio
     - rasterstats
     - oasis
+    - netCDF4
+    - scikit-learn
+    - scikit-image
+    - ecmwf-api-client
 
 test:
   imports:
