--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,4 +1,31 @@
 recipe_dir: recipe
+
+channels:
+  # sources selects the channels to pull packages from, in order.
+  sources:
+    - conda-forge
+    - defaults
+  # targets is a list of 2-lists, where the first element is the
+  # channel to push to and the second element is the label on that channel
+  targets:
+    - ["conda-forge", "main"]
+
+appveyor:
+  secure:
+    BINSTAR_TOKEN: <some big hash>
+
+azure:
+  # flag for forcing the building all supported providers
+  force: False
+  # toggle for storing the conda build_artifacts directory (including the
+  # built packages) as an Azure pipeline artifact that can be downloaded
+  store_build_artifacts: False
+
+provider:
+  linux: travis
+  osx: travis
+  win: travis
+  
 skip_render:
   - README.md
   - LICENSE.txt
