--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,7 +44,7 @@ init:
   - git config --global core.autocrlf input
 
 # clone directory
-clone_folder: F:\01Algorithms\Hydrology\HAPI
+clone_folder: https://github.com/MAfarrag/Hapi.git
 
 install:
   # for python 3.4 as it does not exist in conda channels
