--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,7 +46,7 @@ init:
 # clone directory
 #clone_folder: git@github.com:MAfarrag/Hapi.git
 #clone_folder: https://github.com/MAfarrag/Hapi.git
-before_install:
+before_build:
   # Install the latest version of Miniconda
   - wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
