--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,9 @@ branches:
     - gh-pages
 
 environment:
+  # Appveyor machines come with miniconda already installed.
+  CONDA_INSTALL_LOCN: "C:\\Miniconda-x64"
+  
   matrix:
   - TOXENV: py27
   - TOXENV: py35
@@ -54,7 +57,7 @@ before_build:
   - export PATH=/home/appveyor/miniconda2/bin:$PATH
   - conda update --yes conda
   - conda info -a
-  
+
 install:
   # for python 3.4 as it does not exist in conda channels
   # conda config --set restore_free_channel True
