--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,7 +57,7 @@ init:
 
 install:
   # Clone simply to get the script for setting up Windows build environment.
-   #- cmd: git clone https://github.com/MAfarrag/Hapi.git
+   
   # for python 3.4 as it does not exist in conda channels
   # conda config --set restore_free_channel True
   # No need to install miniconda because appveyor comes with it.
@@ -67,6 +67,7 @@ install:
   #- cmd: source activate Hapi-env
   # Install various dependencies
   #- cmd: conda install --yes $DEPS pip
+  - cmd: git clone https://github.com/MAfarrag/Hapi.git
   - cmd: git checkout git@github.com:MAfarrag/Hapi.git
   # You can add any CONDA channels you may need here. CONDA supports
   # both the commands add and append. The only difference is that 
