--- a/appveyor.yml
+++ b/appveyor.yml
@@ -67,8 +67,8 @@ install:
   #- cmd: source activate Hapi-env
   # Install various dependencies
   #- cmd: conda install --yes $DEPS pip
-  - cmd: git clone https://github.com/MAfarrag/Hapi.git
-  - cmd: git checkout git@github.com:MAfarrag/Hapi.git
+  #- cmd: git clone https://github.com/MAfarrag/Hapi.git
+  #- cmd: git checkout git@github.com:MAfarrag/Hapi.git
   # You can add any CONDA channels you may need here. CONDA supports
   # both the commands add and append. The only difference is that 
   # the add command places the channel at the front of the priority 
