--- a/appveyor.yml
+++ b/appveyor.yml
@@ -75,8 +75,8 @@ install:
   - cmd: python setup.py build_ext --inplace
   - cmd: python setup.py install
   - cmd: cd ..
-  - cmd: pip install tox
-  
+  #- cmd: pip install tox
+
 build: off
 # build Configuration, i.e. Debug, Release, etc.
 # to add several configurations to build matrix:
