--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,6 @@ envlist = py27,py36, py35, py37, py38, py39
 deps = 
 	pytest
 	-r{toxinidir}/requirements.txt
-	Hapi
+#	Hapi
 # run the tests
 #import Hapi
