--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,5 @@ install:
   - cd ..
 # command to run tests
 script:
-  - cd ./Hapi/Examples
-#  - pytest test.py
+  #- cd ./Hapi/Examples
+  - tests/test.py
