--- a/appveyor.yml
+++ b/appveyor.yml
@@ -77,7 +77,7 @@ install:
   - cmd: python setup.py build_ext --inplace
   - cmd: python setup.py install
   #- cmd: cd ..
-  - cmd: pip install tox
+  #- cmd: pip install tox
 
 build: off
 # build Configuration, i.e. Debug, Release, etc.
