--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ python:
   - "3.6" # current default Python on Travis CI
   - "3.7"
   - "3.8"
-env: DEPS= "numpy affine fiona proj pyproj gdal pandas geopandas matplotlib python scipy shapely statsmodels rasterio rasterstats oasis netCDF4 sklearn ecmwf-api-client"
+  - "3.9"
+env: DEPS= " numpy affine fiona proj pyproj gdal pandas geopandas matplotlib python scipy shapely statsmodels rasterio rasterstats oasis netCDF4 sklearn ecmwf-api-client "
 before_install:
   # Install the latest version of Miniconda
   - wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh
@@ -21,18 +22,19 @@ install:
   # for python 3.4 as it does not exist in conda channels
   # conda config --set restore_free_channel True
   # Create a new environment
-  - conda create -q -n Hapi-env python=${TRAVIS_PYTHON_VERSION} --yes
+  - conda create -q -n Hapi-env python=${TRAVIS_PYTHON_VERSION} --yes -f environment.yml
   - source activate Hapi-env
-  # Install various dependencies
-  - conda install --yes $DEPS pip
   # You can add any CONDA channels you may need here. CONDA supports
   # both the commands add and append. The only difference is that 
   # the add command places the channel at the front of the priority 
   # list, while append does the opposite.
   - conda config --add channels conda-forge
+  # Install various dependencies
+  #- conda install --yes $DEPS pip
   - python -V
   - python setup.py build_ext --inplace
   - python setup.py install
+  - 
  # - cd ..
 # command to run tests
 script:
