--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   # for python 3.4 as it does not exist in conda channels
   # conda config --set restore_free_channel True
   # Create a new environment
-  - conda create -q -n Hapi-env python=${TRAVIS_PYTHON_VERSION} --yes -f environment.yml
+  - conda create -q -n Hapi-env python=${TRAVIS_PYTHON_VERSION} --yes
   - source activate Hapi-env
   # You can add any CONDA channels you may need here. CONDA supports
   # both the commands add and append. The only difference is that 
@@ -30,7 +30,8 @@ install:
   # list, while append does the opposite.
   - conda config --add channels conda-forge
   # Install various dependencies
-  #- conda install --yes $DEPS pip
+  - conda install --yes $DEPS pip
+  - conda update --all
   - python -V
   - python setup.py build_ext --inplace
   - python setup.py install
