--- a/appveyor.yml
+++ b/appveyor.yml
@@ -73,6 +73,7 @@ install:
   # the add command places the channel at the front of the priority 
   # list, while append does the opposite.
   - cmd: conda config --add channels conda-forge
+  - cmd: conda update --all
   - cmd: python -V
   - cmd: python setup.py build_ext --inplace
   - cmd: python setup.py install
