--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   - "3.7"
   - "3.8"
   - "3.9"
-env: DEPS= " numpy affine fiona proj pyproj gdal pandas geopandas matplotlib python scipy shapely statsmodels rasterio rasterstats oasis netCDF4 sklearn ecmwf-api-client "
+env: DEPS= " affine numpy fiona proj pyproj gdal pandas geopandas matplotlib python scipy shapely statsmodels rasterio rasterstats oasis netCDF4 sklearn ecmwf-api-client "
 before_install:
   # Install the latest version of Miniconda
   - wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh
@@ -29,7 +29,7 @@ install:
   # the add command places the channel at the front of the priority 
   # list, while append does the opposite.
   - conda config --add channels conda-forge
-  # Install various dependencies
+  # Install various dependencies  
   - conda install --yes $DEPS pip
   - conda update --all --yes
   - python -V
