--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,13 @@ install:
   # the add command places the channel at the front of the priority 
   # list, while append does the opposite.
   - conda config --add channels conda-forge
+  - conda config --add channels https://conda.binstar.org/asmeurer
+  - conda config --add channels https://conda.binstar.org/cgat
+  - free > memory-after-conda-install
+  - install-1/bin/conda clean --index-cache
+  - free > memory-after-conda-clean
+  - rm -rf install-1/
+  - free > memory-after-conda-rm
   # Install various dependencies  
   #- conda install --yes $DEPS pip
   - conda env update -n Hapi-env --file environment.yml  --prune
