--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,9 @@ install:
   # the add command places the channel at the front of the priority 
   # list, while append does the opposite.
   - conda config --add channels conda-forge
-  - conda config --add channels https://conda.binstar.org/asmeurer
-  - conda config --add channels https://conda.binstar.org/cgat
-  - conda clean --index-cache
+  - conda config --add channels asmeurer
+  - conda config --add channels cgat
+  #- conda clean --index-cache
   #- conda clean --lock
   - conda clean --tarballs -y
   - conda clean --packages -y
