--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,7 +74,7 @@ install:
   # list, while append does the opposite.
   - cmd: conda config --add channels conda-forge
   - cmd: conda update --all --yes
-  - cmd: conda install -r requirement.txt
+  - cmd: conda install --yes --file environment.yml
   - cmd: python -V
   - cmd: python setup.py build_ext --inplace
   - cmd: python setup.py install
