--- a/appveyor.yml
+++ b/appveyor.yml
@@ -73,8 +73,9 @@ install:
   # the add command places the channel at the front of the priority 
   # list, while append does the opposite.
   - cmd: conda config --add channels conda-forge
+  - cmd: conda config --add channels mafarrag
   - cmd: conda update --all --yes
-  - cmd: conda install --yes --file environment.yml
+  - cmd: conda install --yes --file requirement.txt
   - cmd: python -V
   - cmd: python setup.py build_ext --inplace
   - cmd: python setup.py install
