--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,9 @@ install:
   # the add command places the channel at the front of the priority 
   # list, while append does the opposite.
   - conda config --add channels conda-forge
-  - conda config --add channels asmeurer
-  - conda config --add channels cgat
+  - conda config --add channels mafarrag
+  #- conda config --add channels asmeurer
+  #- conda config --add channels cgat
   #- conda clean --index-cache
   #- conda clean --lock
   - conda clean --tarballs -y
