--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ install:
   
   #- conda install --yes $DEPS pip
   #- conda install --yes --file requirement.txt
-  - while read requirement; do conda install --yes $requirement; done < requirements.txt
+  - while read requirement; do conda install --yes $requirement; done < requirement.txt
   - python -V
   - python setup.py build_ext --inplace
   - python setup.py install
