--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
   - "3.9"
   - "3.5"  
   - "2.7"
-env: DEPS= " affine numpy fiona proj pyproj gdal pandas geopandas matplotlib python scipy shapely statsmodels rasterio rasterstats oasis netCDF4 sklearn ecmwf-api-client "
+#env: DEPS= " affine numpy fiona proj pyproj gdal pandas geopandas matplotlib python scipy shapely statsmodels rasterio rasterstats oasis netCDF4 sklearn ecmwf-api-client "
 
 before_install:
   # Install the latest version of Miniconda
@@ -42,6 +42,7 @@ install:
   #- conda install --yes $DEPS pip
   #- conda install --yes --file requirement.txt
   - while read requirement; do conda install --yes $requirement; done < requirement.txt
+  - pip install ecmwf-api-client
   - python -V
   - python setup.py build_ext --inplace
   - python setup.py install
