--- a/appveyor.yml
+++ b/appveyor.yml
@@ -77,12 +77,13 @@ install:
   - cmd: conda config --add channels conda-forge
   - cmd: conda config --add channels mafarrag
   - cmd: while read requirement; do conda install --yes $requirement; done < requirements.txt
+  - cmd: pip install ecmwf-api-client
   - cmd: python -V
   - cmd: python setup.py build_ext --inplace
   - cmd: python setup.py install
-  - cmd: conda update --all --yes
+  - cmd: conda update conda --yes
+  - cmd: conda install numpy --yes
   #- cmd: cd ..
-  #- cmd: pip install tox
 
 build: off
 # build Configuration, i.e. Debug, Release, etc.
@@ -90,10 +91,6 @@ build: off
 configuration:
   - Debug
   - Release
-
-#script:
-#  - cd ./Hapi/Examples
-
 
 test_script:
 #- tox
